# PROYECTO_TFM_UNIR

./: .env.example  .gitignore  README.md  _make_commit.sh  mcp-config.json  pyproject.toml  run_mcp_inspector.ps1
scripts/: create_match_executions.sql  index_all_collections.ps1
src/tfm_match/: config.py
src/tfm_match/api/: main.py  reranking_rules.py
src/tfm_match/bronze/: mysql.py
src/tfm_match/core/: __init__.py  dimension_matcher.py  embeddings_manager.py  filters.py  persistence.py  result_aggregator.py
src/tfm_match/embeddings/: delete_education_collection.py  delete_experience_collection.py  delete_job_title_collection.py  delete_sector_collection.py  index_education.py  index_experience.py  index_job_title.py  index_language.py  index_sector.py  index_skills.py  query_education.py  query_experience.py  query_job_title.py  query_language.py  query_sector.py  query_skills.py  test_chroma.py
src/tfm_match/front-end/: app.py  styles.css
src/tfm_match/gold/: text_builder.py  text_sanitizer.py
src/tfm_match/llm/: __init__.py  client.py  spec.py
src/tfm_match/mcp/: __init__.py  server.py
src/tfm_match/mcp/tools/: __init__.py  aggregation_tools.py  dimension_tools.py
src/tfm_match/scripts/: build_candidates_prepared.py  build_silver.py  inspect_data.py  inspect_gold_text.py  inspect_silver.py  populate_profile_text.py
src/tfm_match/silver/: clean_candidates.py  schema.py
tests/: baseline_cases.json  capture_baseline.py  test_llm_orchestration.py  test_mcp_tools.py  validate_consistency.py
