[tool.poetry]
name = "tfm-match"
version = "0.1.0"
description = ""
authors = ["Oscar Iván López Bello <oscarivan.lopez141@comunidadunir.net>", "Jorge Andrés Rojas <jorgeandres.rojas142@comunidadunir.net>"]
readme = "README.md"
packages = [{include = "tfm_match", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
sqlalchemy = ">=2.0.45,<3.0.0"
mysqlclient = ">=2.2.7,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
pyarrow = ">=22.0.0,<23.0.0"
chromadb = ">=1.3.7,<2.0.0"
sentence-transformers = ">=5.2.0,<6.0.0"
torch = ">=2.9.1,<3.0.0"
openai = "^2.14.0"
fastapi = "^0.127.1"
uvicorn = "^0.40.0"
streamlit = "^1.52.2"
requests = "^2.32.5"
pymysql = "^1.1.2"
cryptography = "^46.0.3"
python-dotenv = "^1.0.0"
mcp = "^1.1.2"
starlette = "^0.41.0"
sse-starlette = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
